--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
+
 plugins {
-    id 'org.springframework.boot' version '2.3.0.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'java'
-}
+        id 'org.springframework.boot' version '2.3.0.RELEASE'
+        id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+        id 'java'
+    }
+
 
 group = 'com.bit'
 version = '0.0.1-SNAPSHOT'
@@ -35,6 +37,10 @@ dependencies {
     // MyBatis
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
     compile("org.mybatis:mybatis:3.4.5")
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
+
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
