--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
     compile("org.mybatis:mybatis:3.4.5")
 
+    //thymeleaf-layout
+    implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
