--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
-
 plugins {
-        id 'org.springframework.boot' version '2.3.0.RELEASE'
-        id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-        id 'java'
-    }
+    id 'org.springframework.boot' version '2.3.0.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'java'
+}
 
 
 group = 'com.bit'
@@ -37,17 +36,24 @@ dependencies {
     // MyBatis
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
     compile("org.mybatis:mybatis:3.4.5")
-    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+
+    //thymeleaf-layout
+    implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
+
+
+    //Jackson
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.7'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.7'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
+    // Json
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-
-
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-}
 
-test {
-    useJUnitPlatform()
+    test {
+        useJUnitPlatform()
+    }
 }
