--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,12 @@ dependencies {
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
     compile("org.mybatis:mybatis:3.4.5")
 
+    // https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-jasper
+    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '10.0.0-M5'
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.0'
+
     // Json
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     
