--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,13 @@ dependencies {
 
     testImplementation 'org.springframework.security:spring-security-test'
 
+    //fileupload
+    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.2'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
 
     test {
         useJUnitPlatform()
