--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     //for Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    compile('org.springframework.security:spring-security-oauth2-client')
+    compile('org.springframework.security:spring-security-oauth2-jose')
 
     // MyBatis
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
@@ -47,7 +48,7 @@ dependencies {
 
     // Json
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    
+
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
 
