--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  #chat(redis)
+  profiles:
+    active: local
+  redis:
+    host: localhost
+    port: 6379
   #mybatis
   datasource:
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
