--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   #mybatis
   datasource:
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    url: jdbc:log4jdbc:mysql://localhost:3306/thehouse?serverTimezone=UTC&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+    url: jdbc:log4jdbc:mysql://localhost:3306/thehouse?serverTimezone=UTC&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
     username: root
     password: 1234
 
